--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /sweets
 /node_modules
 /client/node_modules
+/server/node_modules
+
 /.pnp
 .pnp.js
 
@@ -24,3 +26,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/server/.env
