--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/_old_files
-/sweets
 /node_modules
 /client/node_modules
 /server/node_modules
-
 /.pnp
 .pnp.js
 
 # testing
 /coverage
+/.vscode
 
 # production
 /build
@@ -27,4 +25,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+#.env config
 /server/.env
+/client/.env
+
+#old files
+/sweets
+/_old_files
