--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
+    "mobx": "^6.3.3",
     "mysql2": "^2.3.0",
     "nodemailer": "^6.6.3",
     "sequelize": "^6.6.5",
