--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "nodemailer": "^6.6.3",
+    "react-paypal-express-checkout": "^1.0.5",
     "sequelize": "^6.6.5",
     "uuid": "^8.3.2"
   },
