--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Bakery",
   "scripts": {
-    "start": "node server",
-    "build": "cd client/ && npm install && npm run build"
+
+    "heroku-prebuild": "cd server && npm install && npm run build && cd .. && cd client && npm install",
+    "start": "cd client && npm start"
   },
   "cacheDirectories": [
     "node_modules",
