added role in db

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://illyako.github.io",
+  "homepage": "http://illyako.github.io/bakery",
   "name": "bakery",
   "version": "0.1.0",
   "private": true,
